commit details: => added a message template => fixed some issues in twitcheventsubscriber listener => added exception handler in controller => created a session helper to move some extra code from controller => added new message template to all views

--- a/www/src/Streamlabs/Bundle/TwitchBundle/Resources/views/Default/twitchStreamer.html.twig
+++ b/www/src/Streamlabs/Bundle/TwitchBundle/Resources/views/Default/twitchStreamer.html.twig
@@ -8,6 +8,7 @@
         {% include 'TwitchBundle:Default:header_menu.html.twig' %}
 
         <div class="col-md-4 offset-md-4" style="margin-top: 200px;">
+            {% include 'default/messages.html.twig' %}
             <div class="box box-info">
                 <!-- /.box-header -->
                 <!-- form start -->
